chore(test): update client side test
- update client side to and complete test
- install and configure jswebToken

[Finished ]

--- a/.eslintrc
+++ b/.eslintrc
@@ -84,7 +84,8 @@
     "no-unused-vars": false,
     "localStorage": true,
     "location": true,
-    "document": true
+    "document": true,
+    "window": true
   },
   "parser": "babel-eslint",
   "parserOptions": {
