--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,8 @@ before_install:
 after_script:
   - npm test
   - npm run client-test
+env:
+ CODECLIMATE_REPO_TOKEN: process.env.CODE_CLIMATE
+
+after_success:
+  - npm run coverage
